<resources>
    <string name="app_name">BTGPS Logger</string>
    <string name="gps">GPS</string>
    <string name="tracker">Tracker</string>
    <string name="track_list">TrackList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">You really want to delete?</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="enable_mock">Enable Mock GPS Provider</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="time_elapsed">Time elapsed:</string>
    <string name="points">Points:</string>
    <string name="connection_fail">Connection fail</string>
    <string name="satellites_in_use">Satellites in use</string>
    <string name="title_activity_list_tracks">ListTracksActivity</string>
    <string name="list_tracks">List tracks</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="no_files">No files</string>
    <string name="error">Error</string>
    <string name="network_disable">Network connection not available</string>
    <string name="save_to_directory">Save to directory</string>
    <string name="upload">Upload</string>
    <string name="save_to_folder">Save to folder</string>
    <string name="google_connection_failed">GoogleApiClient connection failed:</string>
    <string name="problem_while_retrieving_files">Problem while retrieving files</string>
    <string name="error_while_trying_to_create_the_folder">Error while trying to create the folder</string>
    <string name="upload_canceled">Upload canceled</string>
    <string name="uploading_in_process">Uploading files in process</string>
    <string name="no_files_selected">No files selected</string>
    <string name="location_is_not_established">The current location is not established</string>
    <string name="enable_bt">Enable BT</string>
    <string name="google_folder_name">Google disk folder name</string>
    <string name="folder_name_default">BTGPS Logger</string>
    <string name="google_folder_name_pref_summary">Please provide folder name on Google Disk</string>
    <string name="distance">Distance:</string>
    <string name="meters">meters</string>
    <string name="kilometers">kilometers</string>
    <string name="wait_gps_location">Wait GPS location ...</string>
    <string name="app_data_folder_name">Application data folder name</string>
    <string name="folder_name_pref_summary">Please provide folder name on your device</string>
    <string name="error_data_folder">Application data folder is not available</string>
    <string name="interval_recording_points">Interval recording points</string>
    <string name="default_interval_recording">5</string>
    <string name="setting_folder_name">Setting folder name</string>
    <string name="setting_records">Setting track records</string>
    <string name="time_in_seconds">Time in seconds</string>
    <string name="speed_gps">Speed (km/h)</string>
    <string name="course_over_ground">Course over Ground</string>
    <string name="scheme_track">Format saved track</string>
    <string name="default_track_scheme">KML</string>
    <string-array name="track_scheme_entries">
        <item>GPX</item>
        <item>KML</item>
    </string-array>
</resources>
