<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/delete"
                android:id="@+id/btnTrackListDelete"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <Button
                android:layout_width="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/export"
                android:id="@+id/btnTrackListExport"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnTrackListDelete"
                android:layout_marginStart="10dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbAllListTrack"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp" />
        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_files">
    </TextView>
</LinearLayout>