<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/main_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutHeader">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layoutEnableBT">
            <Button
                android:layout_width="match_parent"
                style="@style/ButtonStyle"
                android:text="@string/enable_bt"
                android:id="@+id/btnEnableBT"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layoutDeviceConnect">
            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDevices"/>
            <Button
                android:layout_width="100dp"
                style="@style/ButtonStyle"
                android:text="@string/connect"
                android:id="@+id/btnDeviceConnect"
                android:enabled="true"/>
        </LinearLayout>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutBody"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/layoutHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/layoutDate"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Date/Time"
                android:id="@+id/txtDateLabel"
                style="@style/TrackValue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="00-00-00"
                android:gravity="center"
                android:id="@+id/txtViewDate"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="00:00:00"
                android:gravity="center"
                android:id="@+id/txtViewTime" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutAltitude"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Altitude"
                android:id="@+id/txtAltitudeLabel"
                style="@style/TrackValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:id="@+id/txtViewAltitude" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutLat"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Lat/Lon"
                android:id="@+id/txtLatLabel"
                style="@style/TrackValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="---"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:id="@+id/txtViewLat" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="---"
                android:gravity="center"
                android:id="@+id/txtViewLon" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutUTM"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/satellites_in_use"
                android:id="@+id/txtSatellitesLabel"
                style="@style/TrackValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="---"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:id="@+id/txtViewSatellites" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutSpeed"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/speed_gps"
                android:id="@+id/txtSpeedLabel"
                style="@style/TrackValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:id="@+id/txtViewSpeed" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutCourse"
            style="@style/ViewLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/course_over_ground"
                android:id="@+id/txtCourceLabel"
                style="@style/TrackValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:id="@+id/txtViewCourse" />
        </LinearLayout>
    </GridLayout>

</RelativeLayout>
